# learn-yew

./: Cargo.toml  index.html  tailwind.config.js
src/: component.rs  main.rs  router.rs
src/pages/: contact.rs  home.rs
