[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.30"
serde_json = "1.0.81"
serde = { version = "1.0.37", features = ["derive"] }
web-sys = { version = "0.3.65", features = ["Request", "Window"] }
reqwest = { version = "0.11.22", features = ["json"] }
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
# web-sys = "0.3.65"
